--- a/_config.yml
+++ b/_config.yml
@@ -105,3 +105,9 @@ deploy:
  type: git  
  repo: https://github.com/mlosun/My_blog.git # 你的 Github 仓库地址  
  branch: source
+
+# 添加搜索插件 hexo-generator-search
+search:
+  path: search.xml
+  field: post
+  content: true
